y.output
Grammar

    0 $accept: PROG $end

    1 PROG: STMTS

    2 STMTS: T_NEWLINE
    3      | STMT T_NEWLINE STMTS
    4      | T_QUIT T_NEWLINE

    5 STMT: DTYPE T_ID IDLIST SEMI
    6     | T_ID T_ASSIGN EXPR SEMI

    7 EXPR: /* empty */
    8     | T_LEFT EXPR T_RIGHT EXPR
    9     | TERM
   10     | TERM T_PLUS EXPR
   11     | TERM T_MINUS EXPR
   12     | TERM T_MULTIPLY EXPR
   13     | TERM T_DIVIDE EXPR
   14     | TERM T_MOD EXPR

   15 TERM: T_ID
   16     | T_INT
   17     | T_STR
   18     | T_FLOAT
   19     | T_CHAR

   20 IDLIST: /* empty */
   21       | T_COMA T_ID IDLIST


Terminals, with rules where they appear

$end (0) 0
error (256)
DTYPE (258) 5
T_INT (259) 16
T_FLOAT (260) 18
T_CHAR (261) 19
T_STR (262) 17
T_PLUS (263) 10
T_MINUS (264) 11
T_MULTIPLY (265) 12
T_DIVIDE (266) 13
T_MOD (267) 14
T_LEFT (268) 8
T_RIGHT (269) 8
SEMI (270) 5 6
T_ASSIGN (271) 6
T_ID (272) 5 6 15 21
T_COMA (273) 21
T_NEWLINE (274) 2 3 4
T_QUIT (275) 4


Nonterminals, with rules where they appear

$accept (21)
    on left: 0
PROG (22)
    on left: 1, on right: 0
STMTS (23)
    on left: 2 3 4, on right: 1 3
STMT (24)
    on left: 5 6, on right: 3
EXPR (25)
    on left: 7 8 9 10 11 12 13 14, on right: 6 8 10 11 12 13 14
TERM (26)
    on left: 15 16 17 18 19, on right: 9 10 11 12 13 14
IDLIST (27)
    on left: 20 21, on right: 5 21


state 0

    0 $accept: . PROG $end

    DTYPE      shift, and go to state 1
    T_ID       shift, and go to state 2
    T_NEWLINE  shift, and go to state 3
    T_QUIT     shift, and go to state 4

    PROG   go to state 5
    STMTS  go to state 6
    STMT   go to state 7


state 1

    5 STMT: DTYPE . T_ID IDLIST SEMI

    T_ID  shift, and go to state 8


state 2

    6 STMT: T_ID . T_ASSIGN EXPR SEMI

    T_ASSIGN  shift, and go to state 9


state 3

    2 STMTS: T_NEWLINE .

    $default  reduce using rule 2 (STMTS)


state 4

    4 STMTS: T_QUIT . T_NEWLINE

    T_NEWLINE  shift, and go to state 10


state 5

    0 $accept: PROG . $end

    $end  shift, and go to state 11


state 6

    1 PROG: STMTS .

    $default  reduce using rule 1 (PROG)


state 7

    3 STMTS: STMT . T_NEWLINE STMTS

    T_NEWLINE  shift, and go to state 12


state 8

    5 STMT: DTYPE T_ID . IDLIST SEMI

    T_COMA  shift, and go to state 13

    $default  reduce using rule 20 (IDLIST)

    IDLIST  go to state 14


state 9

    6 STMT: T_ID T_ASSIGN . EXPR SEMI

    T_INT    shift, and go to state 15
    T_FLOAT  shift, and go to state 16
    T_CHAR   shift, and go to state 17
    T_STR    shift, and go to state 18
    T_LEFT   shift, and go to state 19
    T_ID     shift, and go to state 20

    $default  reduce using rule 7 (EXPR)

    EXPR  go to state 21
    TERM  go to state 22


state 10

    4 STMTS: T_QUIT T_NEWLINE .

    $default  reduce using rule 4 (STMTS)


state 11

    0 $accept: PROG $end .

    $default  accept


state 12

    3 STMTS: STMT T_NEWLINE . STMTS

    DTYPE      shift, and go to state 1
    T_ID       shift, and go to state 2
    T_NEWLINE  shift, and go to state 3
    T_QUIT     shift, and go to state 4

    STMTS  go to state 23
    STMT   go to state 7


state 13

   21 IDLIST: T_COMA . T_ID IDLIST

    T_ID  shift, and go to state 24


state 14

    5 STMT: DTYPE T_ID IDLIST . SEMI

    SEMI  shift, and go to state 25


state 15

   16 TERM: T_INT .

    $default  reduce using rule 16 (TERM)


state 16

   18 TERM: T_FLOAT .

    $default  reduce using rule 18 (TERM)


state 17

   19 TERM: T_CHAR .

    $default  reduce using rule 19 (TERM)


state 18

   17 TERM: T_STR .

    $default  reduce using rule 17 (TERM)


state 19

    8 EXPR: T_LEFT . EXPR T_RIGHT EXPR

    T_INT    shift, and go to state 15
    T_FLOAT  shift, and go to state 16
    T_CHAR   shift, and go to state 17
    T_STR    shift, and go to state 18
    T_LEFT   shift, and go to state 19
    T_ID     shift, and go to state 20

    $default  reduce using rule 7 (EXPR)

    EXPR  go to state 26
    TERM  go to state 22


state 20

   15 TERM: T_ID .

    $default  reduce using rule 15 (TERM)


state 21

    6 STMT: T_ID T_ASSIGN EXPR . SEMI

    SEMI  shift, and go to state 27


state 22

    9 EXPR: TERM .
   10     | TERM . T_PLUS EXPR
   11     | TERM . T_MINUS EXPR
   12     | TERM . T_MULTIPLY EXPR
   13     | TERM . T_DIVIDE EXPR
   14     | TERM . T_MOD EXPR

    T_PLUS      shift, and go to state 28
    T_MINUS     shift, and go to state 29
    T_MULTIPLY  shift, and go to state 30
    T_DIVIDE    shift, and go to state 31
    T_MOD       shift, and go to state 32

    $default  reduce using rule 9 (EXPR)


state 23

    3 STMTS: STMT T_NEWLINE STMTS .

    $default  reduce using rule 3 (STMTS)


state 24

   21 IDLIST: T_COMA T_ID . IDLIST

    T_COMA  shift, and go to state 13

    $default  reduce using rule 20 (IDLIST)

    IDLIST  go to state 33


state 25

    5 STMT: DTYPE T_ID IDLIST SEMI .

    $default  reduce using rule 5 (STMT)


state 26

    8 EXPR: T_LEFT EXPR . T_RIGHT EXPR

    T_RIGHT  shift, and go to state 34


state 27

    6 STMT: T_ID T_ASSIGN EXPR SEMI .

    $default  reduce using rule 6 (STMT)


state 28

   10 EXPR: TERM T_PLUS . EXPR

    T_INT    shift, and go to state 15
    T_FLOAT  shift, and go to state 16
    T_CHAR   shift, and go to state 17
    T_STR    shift, and go to state 18
    T_LEFT   shift, and go to state 19
    T_ID     shift, and go to state 20

    $default  reduce using rule 7 (EXPR)

    EXPR  go to state 35
    TERM  go to state 22


state 29

   11 EXPR: TERM T_MINUS . EXPR

    T_INT    shift, and go to state 15
    T_FLOAT  shift, and go to state 16
    T_CHAR   shift, and go to state 17
    T_STR    shift, and go to state 18
    T_LEFT   shift, and go to state 19
    T_ID     shift, and go to state 20

    $default  reduce using rule 7 (EXPR)

    EXPR  go to state 36
    TERM  go to state 22


state 30

   12 EXPR: TERM T_MULTIPLY . EXPR

    T_INT    shift, and go to state 15
    T_FLOAT  shift, and go to state 16
    T_CHAR   shift, and go to state 17
    T_STR    shift, and go to state 18
    T_LEFT   shift, and go to state 19
    T_ID     shift, and go to state 20

    $default  reduce using rule 7 (EXPR)

    EXPR  go to state 37
    TERM  go to state 22


state 31

   13 EXPR: TERM T_DIVIDE . EXPR

    T_INT    shift, and go to state 15
    T_FLOAT  shift, and go to state 16
    T_CHAR   shift, and go to state 17
    T_STR    shift, and go to state 18
    T_LEFT   shift, and go to state 19
    T_ID     shift, and go to state 20

    $default  reduce using rule 7 (EXPR)

    EXPR  go to state 38
    TERM  go to state 22


state 32

   14 EXPR: TERM T_MOD . EXPR

    T_INT    shift, and go to state 15
    T_FLOAT  shift, and go to state 16
    T_CHAR   shift, and go to state 17
    T_STR    shift, and go to state 18
    T_LEFT   shift, and go to state 19
    T_ID     shift, and go to state 20

    $default  reduce using rule 7 (EXPR)

    EXPR  go to state 39
    TERM  go to state 22


state 33

   21 IDLIST: T_COMA T_ID IDLIST .

    $default  reduce using rule 21 (IDLIST)


state 34

    8 EXPR: T_LEFT EXPR T_RIGHT . EXPR

    T_INT    shift, and go to state 15
    T_FLOAT  shift, and go to state 16
    T_CHAR   shift, and go to state 17
    T_STR    shift, and go to state 18
    T_LEFT   shift, and go to state 19
    T_ID     shift, and go to state 20

    $default  reduce using rule 7 (EXPR)

    EXPR  go to state 40
    TERM  go to state 22


state 35

   10 EXPR: TERM T_PLUS EXPR .

    $default  reduce using rule 10 (EXPR)


state 36

   11 EXPR: TERM T_MINUS EXPR .

    $default  reduce using rule 11 (EXPR)


state 37

   12 EXPR: TERM T_MULTIPLY EXPR .

    $default  reduce using rule 12 (EXPR)


state 38

   13 EXPR: TERM T_DIVIDE EXPR .

    $default  reduce using rule 13 (EXPR)


state 39

   14 EXPR: TERM T_MOD EXPR .

    $default  reduce using rule 14 (EXPR)


state 40

    8 EXPR: T_LEFT EXPR T_RIGHT EXPR .

    $default  reduce using rule 8 (EXPR)
